--- a/style.css
+++ b/style.css
@@ -7,8 +7,17 @@
 --international-klein-blue: #0028A8ff;
 --dark-blue: #0000ABff;
 --jordy-blue: #9BCAF7ff;
-    
+--dutch-white: hsla(42, 62%, 86%, 1);
+
 }
+
+html {
+  overflow-y: scroll;
+  height: 100%;
+  width: 100%;
+  max-height: 100000px;
+}
+
 
 .navbar {
     overflow: hidden;
@@ -34,11 +43,14 @@
     background-color: var(--jordy-blue); 
     color: black; 
   }
+
 body {
     display: flex;
     flex-direction: column;
     margin: 0;
-    height: 100vh; 
+    width: 100%;
+    height: auto; 
+    overflow-y: auto;
 }
 
 .Home_top {
@@ -47,15 +59,18 @@ body {
     background-position: center;
     font-family: sans-serif;
     width: 100%;
-    flex-grow: 10;
+    height: 100vh;
+    flex-grow: 1;
+    overflow-y: auto;
 }
 
 .Home_top h1  {
+    margin: 10%;
     padding: 20px;
     text-align: center;
     color: var(--jordy-blue);
-    text-shadow: 2px 2px var(--dark-blue);
-    font-size: 300%;
+    text-shadow: 4px 4px var(--dark-blue);
+    font-size: 500%;
     
 }
 
@@ -63,5 +78,24 @@ body {
     text-align: center;
     color: var(--jordy-blue);
     text-shadow: 2px 2px var(--dark-blue);
-    
+    font-size: 250%;
+}
+
+#people {
+  margin: 0px;
+  background-image: url("./images/beach-eoxvk1itsaibfbo1.jpg");
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 1000px;
+  text-align: center;
+}
+
+#people h1 {
+  margin: 5%;
+  text-align: center;
+  font-size: 300%;
+  color: var(--dutch-white);
+  text-shadow: 2px 2px var(--celtic-blue);
+  font-family: sans-serif;
 }
